[package]
name = "crossbeam-deque"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-deque-X.Y.Z" git tag
version = "0.6.3"
authors = ["The Crossbeam Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam"
documentation = "https://docs.rs/crossbeam-deque"
description = "Concurrent work-stealing deque"
keywords = ["chase-lev", "lock-free", "scheduler", "scheduling"]
categories = ["algorithms", "concurrency", "data-structures"]

[dependencies.crossbeam-epoch]
version = "0.7"
path = "../crossbeam-epoch"
default-features = false

[dependencies.crossbeam-utils]
version = "0.6"
path = "../crossbeam-utils"
default-features = false

[dev-dependencies]
rand = "0.6"

[features]
default = ["std"]
std = ["crossbeam-utils/std", "crossbeam-epoch/std"]
nightly = ["crossbeam-utils/nightly", "crossbeam-epoch/nightly"]
